<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">Moabi</string>
    <string name="tutorial_main_welcome_msg">Welcome!\nClick \"make entry\" to get started.</string>
    <string name="tutorial_2_main_msg">Now, click \"make entry\" again to track your mood.</string>
    <string name="tutorial_main_click_fab"></string>
    <string name="tutorial_edit_entry_title">You can choose from different surveys to track how your
        mood, energy level, stress and more change over time.\n\nClick \”Mood &amp; Energy\”
        to track your mood and energy level.
</string>
    <string name="tutorial_connect_services_title">You can use this built-in tracker to
        track your physical activity.
        \n\nCheck back later to connect your favorite fitness apps and services. You will learn
        how things like phone usage, weather and physical activities affect your life.
</string>
    <string name="tutorial_wrap_up_title">\n\nYou are all set!\n\nMake sure to check the settings later.
    You can sign in to automatically back up your data and personalize the app.
    \n\nThank you!</string>
    <string name="tutorial_insight_title">Here, you can select and track one item from a list of factors that affect
    your life.\n\nClick the highlighted area and then click \"yes\" in the dialogue.\nYou will be able to track its daily progress real-time.</string>
    <string name="tutorial_insight_info_msg">
    \n\nNote that the recommendation is based on correlations among your data only.
        Our calculation assumes that achieving the recommendation will increase the construct of your interest by 1%.
        The average during the given time period is used as a reference point so that you can
        make small changes, one day at a time.</string>
    <string name="tutorial_lets_get_started_msg">Let\'s get started!</string>
    <string name="tut_lets_get_started_boolean">tut_lets_get_started_boolean</string>
    <string name="sign_in_cancelled">Sign-in was cancelled</string>
    <string name="no_internet_connection">No internet connection\nTry again later.</string>
    <string name="unknown_error">An error has occurred</string>
    <string name="unknown_sign_in_response">Unknown response</string>
    <string name="facebook_app_id">2065912553739218</string>
    <string name="fb_login_protocol_scheme">fb2065912553739218</string>
    <string name="facebook_application_id" translatable="false">@string/facebook_app_id</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2065912553739218</string>
    <string name="sync_sign_in_warning">You must be signed in to sync your data.</string>
    <string name="phone_usage_permission_granted">App usage permission is granted.</string>
    <string name="no_tracker_in_use_msg">No tracker is in use.</string>
    <string name="cheers_good_morning_msg">Good morning!</string>
    <string name="cheers_good_afternoon_msg">Good afternoon!</string>
    <string name="cheers_good_evening_msg">Good evening!</string>
    <string name="cheers_good_night_msg">Ready for bed?</string>
    <string name="cheers_recommendations_ready_msg">Your personalized recommendations are ready.</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="apps_and_services_title">Services</string>
    <string name="edit_activity_title">Edit Activities</string>
    <string name="surveys_title">Surveys</string>
    <string name="edit_surveys_title">Edit Surveys</string>
    <string name="mind_insight_title">Mind</string>
    <string name="body_insight_title">Body</string>
    <string name="average_title">Average</string>
    <string name="best_day_title">Best Day</string>
    <string name="worst_day_title">Worst Day</string>
    <string name="fragment_today_title">Home</string>
    <string name="fragment_insight_title">Insight</string>
    <string name="fragment_stats_title">Stats</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="empty_view_title">Exercise is Medicine</string>
    <string name="empty_view_content">Activity benefits all age groups.\n<b>Track</b> your activity.\n<b>Get insight</b> into how it affects your\n<i>mood, stress, pain and more!</i></string>
    <string name="empty_insight_mind_title">Empty</string>
    <string name="empty_insight_mind_body">Take a survey and get insights on your life.</string>
    <string name="empty_insight_body_title">Not Connected</string>
    <string name="empty_insight_body_body">Connect your favorite apps and services.</string>
    <string name="empty_insight_analysis_title">Not available</string>
    <string name="empty_insight_analysis_body">Your data isn\'t ready.\nIt is yet to find any meaningful connection\nor may need more data.\n\n\Check again after a few more daily entries.\nThank you!</string>
    <string name="empty_view_survey_button">Surveys</string>
    <string name="empty_view_apps_and_services_button">Services</string>
    <string name="location_rationale"><b>Allow access to your location?</b>\n\nAccess to your location data is required to connect Google Fit and weather to this app.</string>
    <string name="fitbit_permission_title">Connect to Fitbit?</string>
    <string name="fitbit_permission_prompt">By connecting Fitbit, you will see your steps, distance, active minutes, sedentary minutes, calories, sleep and floors on this app.\n\nAlso, we will calculate how these stats affect different measures of your life, including mood, energy level and stress.</string>
    <string name="googlefit_install_title">Install Google Fit?</string>
    <string name="googlefit_install_prompt">Google Fit must be installed on this device to connect to Google Fit.</string>
    <string name="googlefit_permission_title">Connect to Google Fit?</string>
    <string name="googlefit_permission_prompt">Google Fit is an open platform that lets you control your fitness data from multiple apps and devices.\n\nBy connecting Google Fit, you will see your steps, distance, active minutes, sedentary minutes and calories on this app.\n\nAlso, we will calculate how these stats affect different measures of your life, including mood, energy level and stress.</string>
    <string name="dialog_positive_text">Yes</string>
    <string name="dialog_negative_text">No</string>
    <string name="phone_usage_permission_title">Data access must be enabled to track your app usage.</string>
    <string name="phone_usage_title">Phone Usage</string>
    <string name="phone_usage_camel_case">phoneUsage</string>
    <string name="phone_usage_description">Phone and app usage.</string>
    <string name="timer_title">Stopwatch</string>
    <string name="timer_camel_case">stopwatch</string>
    <string name="timer_description"></string>
    <string name="fitbit_title">Fitbit</string>
    <string name="fitbit_camel_case">fitbit</string>
    <string name="fitbit_description">Steps, distance, active minutes, sedentary minutes, calories, sleep and floors.</string>
    <string name="googlefit_title">Google Fit</string>
    <string name="googlefit_camel_case">googleFit</string>
    <string name="googlefit_description">Steps, distance, active minutes, sedentary minutes and calories.</string>
    <string name="weather_title">Weather</string>
    <string name="weather_camel_case">weather</string>
    <string name="weather_description">Temperature, humidity and precipitation.</string>
    <string name="moabi_tracker_title">Moabi</string>
    <string name="moabi_tracker_camel_case">moabi</string>
    <string name="moabi_tracker_description">Steps, distance, active minutes, sedentary minutes and calories.</string>
    <string name="baactivity_title">Activity</string>
    <string name="baactivity_camel_case">6behavioralActivationActivity</string>
    <string name="baactivity_desc">Record your day</string>
    <string name="depression_phq9_title">Depression</string>
    <string name="depression_phq9_camel_case">3depressionPhq9</string>
    <string name="depression_phq9_dsc">Check your depression level</string>
    <string name="anxiety_gad7_title">Anxiety</string>
    <string name="anxiety_gad7_camel_case">4anxietyGad7</string>
    <string name="anxiety_gad7_dsc">Check your anxiety level</string>
    <string name="mood_and_energy_title">Mood &amp; Energy</string>
    <string name="mood_and_energy_camel_case">1moodAndEnergy</string>
    <string name="mood_and_energy_desc">Track your mood and energy level</string>
    <string name="mood_title">Mood</string>
    <string name="mood_camel_case">mood</string>
    <string name="energy_title">Energy</string>
    <string name="energy_camel_case">energy</string>
    <string name="stress_title">Stress</string>
    <string name="stress_camel_case">2stress</string>
    <string name="stress_desc">Track your stress</string>
    <string name="daily_review_title">Daily Review</string>
    <string name="daily_review_camel_case">0dailyReview</string>
    <string name="daily_review_desc">Review your day</string>
    <string name="pain_title">Pain</string>
    <string name="pain_camel_case">5pain</string>
    <string name="pain_desc">Track your pain</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="six_months">6 Months</string>
    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="fab_make_entry">Surveys</string>
    <string name="fab_track_activity">Stopwatch</string>
    <string name="fab_edit_connected_services">Edit connected services</string>
    <string name="fab_edit_entry_items">Edit entry items</string>
    <string name="com.ivorybridge.moabi.FITBIT_SHARED_PREFERENCE_KEY">FITBIT_SHARED_PREFERENCE</string>
    <string name="com.ivorybridge.moabi.BUILT_IN_FITNESS_SHARED_PREFERENCE_KEY" translatable="false">BUILT_IN_FITNESS_SHARED_PREFERENCE</string>
    <string name="com.ivorybridge.moabi.GOOGLEFIT_SHARED_PREFERENCE_KEY" translatable="false">GOOGLEFIT_SHARED_PREFERENCE</string>
    <string name="com.ivorybridge.moabi.APP_USAGE_SHARED_PREFERENCE_KEY" translatable="false">APP_USAGE_SHARED_PREFERENCE</string>
    <string name="preference_unit_title">Unit</string>
    <string name="preference_profile_title">Profile</string>
    <string name="preference_notifications_title">Notifications</string>
    <string name="preference_apps_and_services_title">Apps/Services</string>
    <string name="preference_fitness_tracker_title">Fitness Tracker</string>
    <string name="preference_fitness_tracker_notification_title">Fitness Tracker Notification</string>
    <string name="preference_fitness_tracker_source_title">Data Source</string>
    <string name="preference_fitness_tracker_measure_title">Main Measure</string>
    <string name="preference_stopwatch_title">Stopwatch</string>
    <string name="preference_stopwatch_notification_title">Stopwatch Notification</string>
    <string name="preference_recommended_goal_title">Recommended Goal</string>
    <string name="preference_recommended_goal_notification_title">Recommended Goal Notification</string>
    <string name="preference_cheers_notification_title">Cheers Notification</string>
    <string name="preference_daily_check_in_notification_title">Daily Check-In Notification</string>
    <string name="preference_check_in_time_title">Notification Time</string>
    <string name="preference_new_recommendations_notification_title">Daily Briefing Notification</string>
    <string name="preference_new_recommendations_time_title">Notification Time</string>
    <string name="dismiss_title">Dismiss</string>
</resources>