<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_fitness_tracker_title"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreference
            android:key="fitness_tracker_preference"
            android:title="@string/preference_fitness_tracker_notification_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.ListPreference
            android:dialogTitle="@string/preference_fitness_tracker_source_title"
            android:fontFamily="@font/source_sans_pro"
            android:key="fitness_tracker_source_preference"
            android:title="@string/preference_fitness_tracker_source_title"
            app:iconSpaceReserved="true" />

        <androidx.preference.ListPreference
            android:dialogTitle="@string/preference_fitness_tracker_measure_title"
            android:fontFamily="@font/source_sans_pro"
            android:key="fitness_tracker_measures_preference"
            android:title="@string/preference_fitness_tracker_measure_title"
            app:iconSpaceReserved="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_stopwatch_title"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreference
            android:key="timer_preference"
            android:title="@string/preference_stopwatch_notification_title"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preference_recommended_goal_title"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreference
            android:key="personal_goal_preference"
            android:title="@string/preference_recommended_goal_notification_title"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="Reminder"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreference
            android:key="daily_check_in_preference"
            android:title="@string/preference_daily_check_in_notification_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:fontFamily="@font/source_sans_pro"
            android:key="daily_check_in_time_preference"
            android:title="@string/preference_check_in_time_title" />

        <androidx.preference.SwitchPreference
            android:key="cheers_preference"
            android:title="@string/preference_cheers_notification_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreference
            android:key="new_recommendations_preference"
            android:title="@string/preference_new_recommendations_notification_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:fontFamily="@font/source_sans_pro"
            android:key="new_recommendations_time_preference"
            android:title="@string/preference_new_recommendations_time_title" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>