<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/rv_item_insight_emptyview_item_imageview"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:src="@drawable/ic_make_entry"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/rv_item_insight_emptyview_item_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:text="@string/empty_insight_mind_title"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rv_item_insight_emptyview_item_body_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/empty_insight_mind_body"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rv_item_insight_emptyview_item_button"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/fab_make_entry" />

</LinearLayout>