<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_insight_mind_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_checked_text_color="@color/white"
        segmentedgroup:sc_corner_radius="0dp"
        segmentedgroup:sc_tint_color="@color/black">

        <RadioButton
            android:id="@+id/fragment_insight_mind_week_button"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/fragment_insight_mind_month_button"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/month" />

        <RadioButton
            android:id="@+id/fragment_insight_mind_sixmonths_button"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/six_months" />

        <RadioButton
            android:id="@+id/fragment_insight_mind_year_button"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/year" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_insight_mind_spinner_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_insight_mind_radiogroup"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <Spinner
            android:id="@+id/fragment_insight_mind_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="36dp"></Spinner>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_insight_mind_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:layout_below="@id/fragment_insight_mind_spinner_cardview">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>
